<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="data_not_found">Data not found</string>

    <string name="title_one">Explore activities</string>
    <string name="content_one">Explore trending activities in your location</string>

    <string name="title_two">Inspire yourself</string>
    <string name="content_two">Get Inspiration from popular users</string>

    <string name="title_three">Find nearby</string>
    <string name="content_three">Find interesting vendors close to you</string>
</resources>
